Fix news main page pagination bottom spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2670,6 +2670,7 @@ ul.dropdown-menu > li.sub-dropdown:hover > ul.sub-dropdown-group {
 
 .pagerfanta {
     text-align: center;
+    padding-bottom: 30px;
 }
 
 .current {
